--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "inquirer": "^7.0.0",
-    "mongodb": "^3.3.5"
+    "mongodb": "^3.3.5",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
