--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.1",
   "main": "cli.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/cli.js",
+    "build": "yarn lint && babel ./src --out-dir ./dist",
+    "start": "node dist/cli.js",
     "lint": "eslint ."
   },
   "dependencies": {
     "chalk": "^3.0.0",
+    "clear": "^0.1.0",
     "inquirer": "^7.0.0",
     "mongodb": "^3.3.5",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.5",
     "@babel/core": "^7.7.5",
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
@@ -22,7 +25,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
-    "nodemon": "^2.0.1",
     "prettier": "^1.19.1"
   }
 }
